sqlxo/tests/orm/derive/try/err/wrong_literal.stderr
error: expected string literal: #[sqlxo(table_name = "items")]
 --> tests/orm/derive/try/err/wrong_literal.rs:5:22
  |
5 | #[sqlxo(table_name = 123)]
  |                      ^^^
